--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "package"
   ],
   "scripts": {
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "compile": "yarn -s workspaces run compile",
     "lint": "eslint . --ext .ts && prettier --check '**/*'",
     "lint:fix": "eslint . --ext .ts --fix && prettier --write '**/*'"
