--- a/package/package.json
+++ b/package/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/aws-lambda": "^8.10.76",
     "@types/node": "^15.0.1",
     "clipanion": "^3.0.0-rc.12",
     "esbuild": "^0.11.16",
