--- a/package/package.json
+++ b/package/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^15.0.1",
     "clipanion": "^3.0.0-rc.12",
     "esbuild": "^0.11.16",
+    "lambda-api": "^0.10.7",
     "ts-node": "^9.1.1"
   }
 }
