--- a/package/package.json
+++ b/package/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.76",
     "@types/node": "^15.0.1",
+    "aws-sdk": "2.804.0",
     "clipanion": "^3.0.0-rc.12",
     "esbuild": "^0.11.16",
     "lambda-api": "^0.10.7",
