--- a/package/package.json
+++ b/package/package.json
@@ -16,7 +16,11 @@
     "compile": "tsc --project ../package"
   },
   "peerDependencies": {
+    "aws-sdk": "2.804.0",
     "typescript": "^4.2.4"
+  },
+  "devDependencies": {
+    "aws-sdk": "2.804.0"
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.76",
