Add a react app and webpack build to the example workspace

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,3 +1,4 @@
 {
-  "extends": "@zioroboco/bff/tsconfig.json"
+  "extends": "@zioroboco/bff/tsconfig.json",
+  "include": ["bff", "webpack.config"]
 }
