--- a/example/package.json
+++ b/example/package.json
@@ -3,9 +3,30 @@
   "version": "0.0.0-private",
   "private": true,
   "scripts": {
-    "compile": "cd .. && tsc --project example"
+    "build": "webpack --mode=production",
+    "start": "webpack serve --mode=development",
+    "compile": "cd .. && tsc --project example && tsc --project example/app"
   },
   "dependencies": {
-    "@zioroboco/bff": "*"
+    "@zioroboco/bff": "*",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.14.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/html-webpack-plugin": "^3.2.5",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
+    "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^3.11.3",
+    "@types/webpack-env": "^1.16.0",
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.1",
+    "react-refresh": "^0.10.0",
+    "ts-loader": "^9.1.1",
+    "webpack": "^5.36.2",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
