--- a/example/package.json
+++ b/example/package.json
@@ -14,6 +14,7 @@
     "@types/html-webpack-plugin": "^3.2.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.3",
+    "chokidar": "^3.5.1",
     "html-webpack-plugin": "^5.3.1",
     "ts-loader": "^9.1.1",
     "webpack": "^5.36.2",
