--- a/package/package.json
+++ b/package/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.76",
     "@types/node": "^15.0.1",
+    "@types/webpack-dev-server": "^3.11.3",
     "aws-sdk": "2.804.0",
+    "chokidar": "^3.5.1",
     "clipanion": "^3.0.0-rc.12",
     "esbuild": "^0.11.16",
     "lambda-api": "^0.10.7",
