Prevent dev server setup from blocking builds

--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "extends": "@zioroboco/bff/tsconfig.json",
-  "include": ["bff", "webpack.config"]
+  "include": ["bff", "webpack.config.ts"]
 }
