Add CDK dependencies

--- a/package/package.json
+++ b/package/package.json
@@ -19,12 +19,47 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@aws-cdk/assets": "^1.101.0",
+    "@aws-cdk/aws-apigatewayv2": "^1.101.0",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.101.0",
+    "@aws-cdk/aws-applicationautoscaling": "^1.101.0",
+    "@aws-cdk/aws-autoscaling-common": "^1.101.0",
+    "@aws-cdk/aws-certificatemanager": "^1.101.0",
+    "@aws-cdk/aws-cloudformation": "^1.101.0",
+    "@aws-cdk/aws-cloudwatch": "^1.101.0",
+    "@aws-cdk/aws-codeguruprofiler": "^1.101.0",
+    "@aws-cdk/aws-ec2": "^1.101.0",
+    "@aws-cdk/aws-ecr": "^1.101.0",
+    "@aws-cdk/aws-ecr-assets": "^1.101.0",
+    "@aws-cdk/aws-efs": "^1.101.0",
+    "@aws-cdk/aws-elasticloadbalancing": "^1.101.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.101.0",
+    "@aws-cdk/aws-events": "^1.101.0",
+    "@aws-cdk/aws-iam": "^1.101.0",
+    "@aws-cdk/aws-kms": "^1.101.0",
+    "@aws-cdk/aws-lambda": "^1.101.0",
+    "@aws-cdk/aws-logs": "^1.101.0",
+    "@aws-cdk/aws-route53": "^1.101.0",
+    "@aws-cdk/aws-s3": "^1.101.0",
+    "@aws-cdk/aws-s3-assets": "^1.101.0",
+    "@aws-cdk/aws-servicediscovery": "^1.101.0",
+    "@aws-cdk/aws-signer": "^1.101.0",
+    "@aws-cdk/aws-sns": "^1.101.0",
+    "@aws-cdk/aws-sqs": "^1.101.0",
+    "@aws-cdk/aws-ssm": "^1.101.0",
+    "@aws-cdk/cloud-assembly-schema": "^1.101.0",
+    "@aws-cdk/core": "^1.101.0",
+    "@aws-cdk/custom-resources": "^1.101.0",
+    "@aws-cdk/cx-api": "^1.101.0",
+    "@aws-cdk/region-info": "^1.101.0",
     "@types/aws-lambda": "^8.10.76",
     "@types/node": "^15.0.1",
     "@types/webpack-dev-server": "^3.11.3",
+    "aws-cdk": "^1.101.0",
     "aws-sdk": "2.804.0",
     "chokidar": "^3.5.1",
     "clipanion": "^3.0.0-rc.12",
+    "constructs": "^3.3.75",
     "esbuild": "^0.11.16",
     "lambda-api": "^0.10.7",
     "ts-node": "^9.1.1"
