--- a/package/package.json
+++ b/package/package.json
@@ -62,6 +62,7 @@
     "constructs": "^3.3.75",
     "esbuild": "^0.11.16",
     "lambda-api": "^0.10.7",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typanion": "^3.3.1"
   }
 }
