--- a/package/package.json
+++ b/package/package.json
@@ -61,6 +61,7 @@
     "clipanion": "^3.0.0-rc.12",
     "constructs": "^3.3.75",
     "esbuild": "^0.11.16",
+    "execa": "^5.0.0",
     "lambda-api": "^0.10.7",
     "ts-node": "^9.1.1",
     "typanion": "^3.3.1"
