--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,18 @@
     {
       "type": "node",
       "request": "launch",
+      "name": "webpack",
+      "program": "${workspaceFolder}/example/node_modules/.bin/webpack",
+      "args": ["serve", "--mode=development"],
+      "cwd": "${workspaceFolder}/example",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "skipFiles": ["<node_internals>/**"],
+      "disableOptimisticBPs": true
+    },
+    {
+      "type": "node",
+      "request": "launch",
       "name": "jest (all)",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
       "args": ["--runInBand"],
