--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -1,4 +1,8 @@
 {
   "extends": "@zioroboco/bff/tsconfig.json",
-  "include": ["bff", "webpack.config.ts"]
+  "files": [
+    "node_modules/jest-playwright-preset/types/global.d.ts",
+    "node_modules/expect-playwright/global.d.ts"
+  ],
+  "include": ["bff", "spec", "webpack.config.ts"]
 }
