--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -52,4 +52,22 @@ jobs:
         with:
           node-version: "14.x"
       - run: yarn install --frozen-lockfile
-      - run: yarn test --ci
+      - run: yarn test:ci
+
+  e2e:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+        with:
+          path: "**/node_modules"
+          key: ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-${{ hashFiles('**/package.json') }}
+          restore-keys: |
+            ${{ runner.os }}-${{ hashFiles('yarn.lock') }}-
+            ${{ runner.os }}-
+      - uses: actions/setup-node@v1
+        with:
+          node-version: "14.x"
+      - uses: microsoft/playwright-github-action@v1
+      - run: yarn install --frozen-lockfile
+      - run: yarn test:e2e
