--- a/example/tsconfig.json
+++ b/example/tsconfig.json
@@ -4,5 +4,5 @@
     "../node_modules/jest-playwright-preset/types/global.d.ts",
     "../node_modules/expect-playwright/global.d.ts"
   ],
-  "include": ["bff", "spec", "webpack.config.ts"]
+  "include": ["bff", "e2e", "webpack.config.ts"]
 }
