Fix webpack debug profile not working from repo root

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
       "type": "node",
       "request": "launch",
       "name": "webpack",
-      "program": "${workspaceFolder}/example/node_modules/.bin/webpack",
+      "program": "${workspaceRoot}/example/node_modules/.bin/webpack",
       "args": ["serve", "--mode=development"],
-      "cwd": "${workspaceFolder}/example",
+      "cwd": "${workspaceRoot}/example",
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**"],
