--- a/example/package.json
+++ b/example/package.json
@@ -12,7 +12,8 @@
     "compile": "cd .. && tsc --project example && tsc --project example/app"
   },
   "dependencies": {
-    "@zioroboco/bff": "*"
+    "@zioroboco/bff": "*",
+    "cross-fetch": "^3.1.4"
   },
   "devDependencies": {
     "@types/html-webpack-plugin": "^3.2.5",
