--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,4 +63,4 @@ jobs:
           node-version: "14.x"
       - uses: microsoft/playwright-github-action@v1
       - run: yarn install --frozen-lockfile
-      - run: yarn test:e2e
+      - run: yarn test:e2e:ci
