--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:ci": "yarn -s test:package --ci && yarn -s test:example --ci",
     "test:example": "yarn -s example test",
     "test:package": "yarn -s package test",
-    "test:e2e": "start-server-and-test 'yarn -s start --port=5555' http://localhost:5555 'PORT=5555 jest --ci --config example/jest.e2e.config.js'",
+    "test:e2e": "jest --config example/jest.e2e.config.js",
+    "test:e2e:ci": "start-server-and-test 'yarn -s start --port=5555' http://localhost:5555 'PORT=5555 jest --ci --config example/jest.e2e.config.js'",
     "compile": "yarn -s workspaces run compile",
     "lint": "eslint . --ext .ts && prettier --check '**/*'",
     "lint:fix": "eslint . --ext .ts --fix && prettier --write '**/*'"
