--- a/example/package.json
+++ b/example/package.json
@@ -16,10 +16,13 @@
     "cross-fetch": "^3.1.4"
   },
   "devDependencies": {
+    "@types/fetch-mock": "^7.3.3",
     "@types/html-webpack-plugin": "^3.2.5",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-server": "^3.11.3",
     "expect-playwright": "^0.3.4",
+    "fetch-mock": "^9.11.0",
+    "fetch-mock-jest": "^1.5.1",
     "html-webpack-plugin": "^5.3.1",
     "jest-playwright": "^0.0.1",
     "jest-playwright-preset": "^1.5.2",
