--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
       "program": "${workspaceRoot}/example/node_modules/.bin/webpack",
       "args": ["serve", "--mode=development"],
       "cwd": "${workspaceRoot}/example",
+      "runtimeVersion": "14.16.1",
       "console": "internalConsole",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**"],
@@ -19,6 +20,7 @@
       "name": "jest (all)",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
       "args": ["--runInBand"],
+      "runtimeVersion": "14.16.1",
       "console": "internalConsole",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**", "**/node_modules/jest*/**"],
@@ -30,6 +32,7 @@
       "name": "jest (file)",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
       "args": ["${fileBasenameNoExtension}", "--config", "jest.config.js"],
+      "runtimeVersion": "14.16.1",
       "console": "internalConsole",
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**", "**/node_modules/jest*/**"],
